added weekly entry

--- a/index.html
+++ b/index.html
@@ -150,9 +150,11 @@
           of months to make sure I’m as prepared as I possibly can be. My new plan is to complete the Back End portion, and therefore the rest of, the Fullstack Developer program on Codecademy 
           ahead of the boot camp start. </li>
 
-        <!-- <li> <u>DATE</u> <br> 
-          ENTRY <br> 
-          <em>PROGRESS</em> </li> -->
+        <li> <u>Week 18: Monday, October 4 - Sunday, October 10</u> <br> 
+          Time for some good old fashion Codecademy lessons! It’s been a little bit but I’m back to it. This week I started learning the basics and fundamentals of the back end, what it is, 
+          how it works, what languages and frameworks exist for it, etc. I didn’t make as much progress as I had hoped, I found it a bit difficult to switch back to the courses from Youtubing 
+          and trial and error. I also celebrated my birthday this week which ate up a lot of my free time. <br> 
+          <em>(109 hrs Total) (58% Completed the Fullstack Developer course)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> 
           ENTRY <br> 
