added weekly entry

--- a/index.html
+++ b/index.html
@@ -156,9 +156,11 @@
           and trial and error. I also celebrated my birthday this week which ate up a lot of my free time. <br> 
           <em>(109 hrs Total) (58% Completed the Fullstack Developer course)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> 
-          ENTRY <br> 
-          <em>PROGRESS</em> </li> -->
+        <li> <u>Week 19: Monday, October 11 - Sunday, October 17</u> <br> 
+          This week was another relatively slow week, I had a hard time really focusing when I needed to. This week I learned the basics of Node and Express. I learned about RESTful APIs, CORS, 
+          Express routes, error handling, and middleware. Towards the end of the week, I learned about the Testing Pyramid, Feature Testing, and Testing Driven Development (TDD). I finished off 
+          the week with an introduction to SQL. <br> 
+          <em>(120 hrs Total) (64% Completed the Fullstack Developer course)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> 
           ENTRY <br> 
