updated weekly progress

--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
           the week with an introduction to SQL. <br> 
           <em>(120 hrs Total) (64% Completed the Fullstack Developer course)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> 
-          ENTRY <br> 
-          <em>PROGRESS</em> </li> -->
+        <li> <u>Week 20: Monday, October 18 - Sunday, October 24</u> <br> 
+          I had to travel this week for work, I don’t have a laptop (yet, I have one on the way). I made absolutely no progress this week. <br> 
+          <em>(120 hrs Total) (64% Completed the Fullstack Developer course)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> 
           ENTRY <br> 
