corrected daily update

--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
           <em>(120 hrs Total) (64% Completed the Fullstack Developer course)</em> </li>
 
         <li> <u>Week 20: Monday, October 18 - Sunday, October 24</u> <br> 
-          I had to travel this week for work, I don’t have a laptop (yet, I have one on the way). I made absolutely no progress this week. <br> 
+          I had to travel this week for work, I don’t have a laptop (yet, I have one on the way) and my Codecademy lessons weren't working correctly on my iPad. An issue I had not anticipated 
+          while planning for the trip. I made absolutely no progress this week. <br> 
           <em>(120 hrs Total) (64% Completed the Fullstack Developer course)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> 
