added weekly entry

--- a/index.html
+++ b/index.html
@@ -167,9 +167,10 @@
           while planning for the trip. I made absolutely no progress this week. <br> 
           <em>(120 hrs Total) (64% Completed the Fullstack Developer course)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> 
-          ENTRY <br> 
-          <em>PROGRESS</em> </li> -->
+        <li> <u>Week 21: Monday, October 25 - Sunday, October 31</u> <br> 
+          This week I finished up the lessons on SQL first then powered through the PostgreSQL database lessons. Towards the end of the week, I completed lessons on relational databases, then 
+          returned to PostgreSQL for more advanced topics like ACID vs BASE and tuning and performance. There was a ton of reading this week but I was determined to make up for last week! <br> 
+          <em>(133 hrs Total) (73% Completed the Fullstack Developer course)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> 
           ENTRY <br> 
