undoing test commit

--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
           returned to PostgreSQL for more advanced topics like ACID vs BASE and tuning and performance. There was a ton of reading this week but I was determined to make up for last week! <br> 
           <em>(133 hrs Total) (73% Completed the Fullstack Developer course)</em> </li>
 
-        <li> <u>TEST</u> <br> 
+        <!-- <li> <u>DATE</u> <br> 
           ENTRY <br> 
-          <em>PROGRESS</em> </li>
+          <em>PROGRESS</em> </li> -->
 
         <!-- <li> <u>DATE</u> <br> 
           ENTRY <br> 
