--- a/index.html
+++ b/index.html
@@ -172,9 +172,12 @@
           returned to PostgreSQL for more advanced topics like ACID vs BASE and tuning and performance. There was a ton of reading this week but I was determined to make up for last week! <br> 
           <em>(133 hrs Total) (73% Completed the Fullstack Developer course)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> 
-          ENTRY <br> 
-          <em>PROGRESS</em> </li> -->
+        <li> <u>Week 22: Monday, November 1 - Sunday, November 7</u> <br> 
+          This week marks the One-Month-Until-Bootcamp-Start so I made sure to keep up the momentum! This week started with a lesson on fusing the Front and Back Ends together, covered how you 
+          would deploy a PERN app to Heroku, then moved on to security. I learned about authentication, cookies, sessions, and web security. Towards the end of the week, I briefly covered data 
+          structures and algorithms, including hash maps, bubble/merge/quicksort, and more. I could tell I only barely scratched the surface on those last topics though and will need to 
+          supplement them later! All in all a VERY full week, with a ton of reading. <br> 
+          <em>(148 hrs Total) (95% Completed the Fullstack Developer course)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> 
           ENTRY <br> 
