added weekly entry to blog

--- a/index.html
+++ b/index.html
@@ -179,9 +179,12 @@
           supplement them later! All in all a VERY full week, with a ton of reading. <br> 
           <em>(148 hrs Total) (95% Completed the Fullstack Developer course)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> 
-          ENTRY <br> 
-          <em>PROGRESS</em> </li> -->
+        <li> <u>Week 23: Monday, November 8 - Sunday, November 14</u> <br> 
+          Final week! This week started with a brief lesson on binary search and search trees. The next lessons were all about interviewing and soft skills, what to expect and how to prepare. 
+          The final lesson was more or less a “now do it”. I didn’t feel prepared enough, but I expected I wouldn’t, which is why I have the boot camp coming up in early December. This marks the 
+          end of my Fullstack Developer course on Codecademy! I plan on taking the next couple of weeks to slow down and take a break before the boot camp. I plan on doing daily quizzes and the 
+          occasional toy problem on leetcode but no more lessons or tutorials. <br> 
+          <em>(154 hrs Total) (100% Completed the Fullstack Developer course)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> 
           ENTRY <br> 
