tweaks and style changes

--- a/Contact.html
+++ b/Contact.html
@@ -16,7 +16,7 @@
   <a href="resume.html" title="Resume">Resume</a>
   <a href="Projects.html" title="Projects">Projects</a>
   <!-- <a href="Interests.html" title="Interests">Interests</a> -->
-  <a href="Contact.html" title="Contacts">Contact</a>
+  <a href="Contact.html" title="Contacts"><u>Contact</u></a>
 </nav>
 
 <!-- Contact Page Body -->
