--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
  <!-- Navigation Bar -->
 <nav>
-  <a href="index.html" title="Home Page">Home</a>
+  <a href="index.html" title="Home Page"><u>Home</u></a>
   <a href="resume.html" title="Resume">Resume</a>
   <a href="Projects.html" title="Projects">Projects</a>
   <!-- <a href="Interests.html" title="Interests">Interests</a> -->
