--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
  <!-- Navigation Bar -->
  <nav>
     <a href="index.html" title="Home Page">Home</a>
-    <a href="resume.html" title="Resume">Resume</a>
+    <a href="resume.html" title="Resume"><u>Resume</u></a>
     <a href="Projects.html" title="Projects">Projects</a>
     <!-- <a href="Interests.html" title="Interests">Interests</a> -->
     <a href="Contact.html" title="Contacts">Contact</a>
