--- a/Projects.html
+++ b/Projects.html
@@ -13,7 +13,7 @@
  <nav>
   <a href="index.html" title="Home Page">Home</a>
   <a href="resume.html" title="Resume">Resume</a>
-  <a href="Projects.html" title="Projects">Projects</a>
+  <a href="Projects.html" title="Projects"><u>Projects</u></a>
   <!-- <a href="Interests.html" title="Interests">Interests</a> -->
   <a href="Contact.html" title="Contacts">Contact</a>
 </nav>
