made BJ game a little more clear

--- a/Projects.html
+++ b/Projects.html
@@ -24,7 +24,7 @@
     <h1>Blackjack</h1>
     <p id="message-element">Want to play a blackjack?</p>
     <p id="cards-element">Cards:</p>
-    <p id="sum-element">Sum:</p>
+    <p id="sum-element">Your Hand:</p>
     <button onclick="startGame()">Start Game</button>
     <button onclick="hitCard()">Hit</button>
     <button onclick="stayCard()">Stay</button>
