added weekly entry

--- a/index.html
+++ b/index.html
@@ -186,9 +186,11 @@
           occasional toy problem on leetcode but no more lessons or tutorials. <br> 
           <em>(154 hrs Total) (100% Completed the Fullstack Developer course)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> 
-          ENTRY <br> 
-          <em>PROGRESS</em> </li> -->
+        <li> <u>Week 27: Monday, December 6 - Sunday, December 12</u> <br> 
+          I ended up taking the previous 3 weeks off completely, fearing burnout. First week! The first day was mostly set up, the first half of the second day was a bit more of the same. We did 
+          manage to cover all of the HTML lessons and, I’m guessing, ⅓ of the CSS lessons. The assignment at the end of the week was to create a portfolio page. I created it, but I intend to use 
+          this one long-term. <br> 
+          <em>(Fullstack Academy Week 1 of 28)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> 
           ENTRY <br> 
