updated resume first line

--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@
   <div class="AboutSection">
     <h1><u>About</u></h1>
         <ul>
-            <li>I am an aspiring Full-Stack Developer, learning how to code from Codecademy, documentation, and YouTube tutorials.</li>
+            <li>I am an aspiring Full-Stack Developer, learning how to code from Fullstack Academy, Codecademy, and YouTube tutorials.</li>
             <li>I am currently a Workplace Coordinator for Autodesk, Inc in Plano, TX. I have a diverse and well rounded employment history with experience in construction (sheet metal), 
             payroll, facilities and general office support.</li>
             <li>I am a dual citizen of Canada and the US, originally from Calgary, Alberta and naturalized in Irving, Texas in the summer of 2011.</li>
