added weekly entry

--- a/index.html
+++ b/index.html
@@ -192,9 +192,10 @@
           this one long-term. <br> 
           <em>(Fullstack Academy Week 1 of 28)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> 
-          ENTRY <br> 
-          <em>PROGRESS</em> </li> -->
+        <li> <u>Week 28: Monday, December 13 - Sunday, December 19</u> <br> 
+          This week was about CSS then JS towards the end. We covered responsive design and pseudo-classes. It was a nice refresher, I had already gotten pretty rusty at both! On the final day of 
+          the week, we covered the fundamentals of JS. So far, so good! <br> 
+          <em>(Fullstack Academy Week 2 of 28)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> 
           ENTRY <br> 
