updated progress line to improve clarity of course/activity

--- a/index.html
+++ b/index.html
@@ -39,8 +39,6 @@
 
       <p>I started my journey with a strict timeline to follow but adjusted and shifted the goalposts as I figured out what worked and what didn’t. Through it all, I never lost sight of the 
         ultimate goal: Developing and honing the necessary skills for a career change. </p>
-
-        <p>This is my coding journal!</p>
   </div>
   
   <!-- Coding Journal -->
@@ -51,53 +49,53 @@
           I started by first resetting all my previous progress on Codecademy, then subscribing to the Fullstack Engineer Pro course. The first two days, and my first “week”, I was excited 
           and probably overdid it a bit. I spent 3 hours both days, I learned the basics of JavaScript and I spent time reading the first chapters in the two Jon Duckett books my curriculum 
           recommended. (HTML & CSS Design and Build Websites - JavaScript and JQuery) <br> 
-          <em>(6 hrs Total) (4% Completed the Fullstack Developer course)</em> </li>
+          <em>(6 hrs Total) (4% Codecademy Fullstack Developer course)</em> </li>
 
         <li> <u>Week 1: Monday, June 7 - Sunday, June 13</u> <br> 
           My first full week. I spent over 3 hours per day between Codecademy, reading the textbooks, and watching youtube. I struggled with higher-order functions, so I slowed down a bit to 
           research them more. I turned to YouTube and a friend in the industry for help. I was also introduced to the art of understanding error messages and started doing daily knowledge 
           checks with the CodecademyGo mobile app. <br> 
-          <em>(29.5 hrs Total) (11% Completed the Fullstack Developer course)</em> </li>
+          <em>(29.5 hrs Total) (11% Codecademy Fullstack Developer course)</em> </li>
 
         <li> <u>Week 2: Monday, June 14 - Sunday, June 2</u> <br> 
           The first thing I learned about this week was git, what it is and how to use GitHub. After git the course returned to JavaScript. All in all, I had a rough week, I was unproductive 
           and unfocused. I had a stressful life event that made the week challenging, but I powered through as best as I could. I found myself making more progress in the textbooks than the 
           actual Codecademy course. <br> 
-          <em>(42.5 hrs Total) (15% Completed the Fullstack Developer course)</em> </li>
+          <em>(42.5 hrs Total) (15% Codecademy Fullstack Developer course)</em> </li>
 
         <li> <u>Week 3: Monday, June 21 - Sunday, June 27</u> <br> 
           This week saw me return to the office. I was previously working from home but my office decided to reopen. I was determined to slow down as little as possible though. While at the 
           office I was able to read a few chapters of my textbook and watch the CS50 Lecture Series on YouTube. By Sunday I had learned enough HTML and CSS to get a basic portfolio page up, 
           and hosted it on GitHub Pages. I was very happy with the progress I had made in the course and with already having something to show for my efforts. <br> 
-          <em>(53.5 hrs Total) (22% Completed the Fullstack Developer course)</em> </li>
+          <em>(53.5 hrs Total) (22% Codecademy Fullstack Developer course)</em> </li>
 
         <li> <u>Week 4: Monday, June 28 - Sunday, July 4</u> <br> 
           This week was largely uneventful, just more HTML and CSS courses. I’m done with JavaScript for a bit, having completed the fundamentals. By the end of the week I had reached the 
           Create A Portfolio Page section of the curriculum, which I was already ahead of. I set myself up to be able to take full advantage of the long weekend, and read chapters in the 
           textbooks to round out the week. <br> 
-          <em>(63.5 hrs Total) (30% Completed the Fullstack Developer course)</em> </li>
+          <em>(63.5 hrs Total) (30% Codecademy Fullstack Developer course)</em> </li>
                 
         <li> <u>Week 5: Monday, July 5 - Sunday, July 11</u> <br> 
           I took advantage of the long weekend to finish setting up my basic portfolio website. I even figured out how to add a contact me page without any JavaScript. This week was largely 
           about keeping the momentum going. Work was definitely taking my energy out of me but I wasn’t about to let anything stop me! <br> 
-          <em>(74 hrs Total) (38% Completed the Fullstack Developer course)</em> </li>
+          <em>(74 hrs Total) (38% Codecademy Fullstack Developer course)</em> </li>
 
         <li> <u>Week 6: Monday, July 12 - Sunday, July 18</u> <br> 
           I started the week off working with APIs in vanilla JavaScript and then moved on to React. I learned about React states, components, props, and the lifecycle. I learned about 
           manipulating the DOM and how to create a React app locally. This week was all about working with classes, but towards the end of the week, I started to learn about hooks. <br> 
-          <em>(85 hrs Total) (45% Completed the Fullstack Developer course)</em> </li>
+          <em>(85 hrs Total) (45% Codecademy Fullstack Developer course)</em> </li>
 
         <li> <u>Week 7: Monday, July 19 - Sunday, July 25</u> <br> 
           This week covered useState, useEffect, useRef, and embedding CSS in JSX. I then learned about properly separating components and importing and exporting them accordingly. The second 
           half of the week briefly covered Redux. I learned about states, actions, reducers, pure functions, and storing data in Redux. <br> 
-          <em>(94 hrs Total) (51% Completed the Fullstack Developer course)</em> </li>
+          <em>(94 hrs Total) (51% Codecademy Fullstack Developer course)</em> </li>
 
         <li> <u>Week 8: Monday, July 26 - Sunday, August 1</u> <br> 
           The week started off with finishing up the Redux lessons. I learned about testing in Redux then moved back to using git. This time I learned about creating and deleting branches in 
           git and how to handle merge conflicts. At this point I was through the Front-End section of the curriculum so I took this time to finish up every other Front-End related course I 
           could on Codecademy. I covered the Sass, intermediate CSS, Responsive Design, Bootstrap, and Navigation Design courses. At this point in my journey I felt it would be a good idea to 
           create a couple web apps in React for my projects page in my portfolio. <br> 
-          <em>(104 hrs Total) (56% Completed the Fullstack Developer course)</em> </li>
+          <em>(104 hrs Total) (56% Codecademy Fullstack Developer course)</em> </li>
 
         <li> <u>Week 9: Monday, August 2 - Sunday, August 8</u> <br> 
           I started the week by taking a couple days to myself. I didn’t make any progress, I just relaxed. The first thing I did was make a list of the React projects I wanted to attempt. I 
@@ -154,37 +152,37 @@
           Time for some good old fashion Codecademy lessons! It’s been a little bit but I’m back to it. This week I started learning the basics and fundamentals of the back end, what it is, 
           how it works, what languages and frameworks exist for it, etc. I didn’t make as much progress as I had hoped, I found it a bit difficult to switch back to the courses from Youtubing 
           and trial and error. I also celebrated my birthday this week which ate up a lot of my free time. <br> 
-          <em>(109 hrs Total) (58% Completed the Fullstack Developer course)</em> </li>
+          <em>(109 hrs Total) (58% Codecademy Fullstack Developer course)</em> </li>
 
         <li> <u>Week 19: Monday, October 11 - Sunday, October 17</u> <br> 
           This week was another relatively slow week, I had a hard time really focusing when I needed to. This week I learned the basics of Node and Express. I learned about RESTful APIs, CORS, 
           Express routes, error handling, and middleware. Towards the end of the week, I learned about the Testing Pyramid, Feature Testing, and Testing Driven Development (TDD). I finished off 
           the week with an introduction to SQL. <br> 
-          <em>(120 hrs Total) (64% Completed the Fullstack Developer course)</em> </li>
+          <em>(120 hrs Total) (64% Codecademy Fullstack Developer course)</em> </li>
 
         <li> <u>Week 20: Monday, October 18 - Sunday, October 24</u> <br> 
           I had to travel this week for work, I don’t have a laptop (yet, I have one on the way) and my Codecademy lessons weren't working correctly on my iPad. An issue I had not anticipated 
           while planning for the trip. I made absolutely no progress this week. <br> 
-          <em>(120 hrs Total) (64% Completed the Fullstack Developer course)</em> </li>
+          <em>(120 hrs Total) (64% Codecademy Fullstack Developer course)</em> </li>
 
         <li> <u>Week 21: Monday, October 25 - Sunday, October 31</u> <br> 
           This week I finished up the lessons on SQL first then powered through the PostgreSQL database lessons. Towards the end of the week, I completed lessons on relational databases, then 
           returned to PostgreSQL for more advanced topics like ACID vs BASE and tuning and performance. There was a ton of reading this week but I was determined to make up for last week! <br> 
-          <em>(133 hrs Total) (73% Completed the Fullstack Developer course)</em> </li>
+          <em>(133 hrs Total) (73% Codecademy Fullstack Developer course)</em> </li>
 
         <li> <u>Week 22: Monday, November 1 - Sunday, November 7</u> <br> 
           This week marks the One-Month-Until-Bootcamp-Start so I made sure to keep up the momentum! This week started with a lesson on fusing the Front and Back Ends together, covered how you 
           would deploy a PERN app to Heroku, then moved on to security. I learned about authentication, cookies, sessions, and web security. Towards the end of the week, I briefly covered data 
           structures and algorithms, including hash maps, bubble/merge/quicksort, and more. I could tell I only barely scratched the surface on those last topics though and will need to 
           supplement them later! All in all a VERY full week, with a ton of reading. <br> 
-          <em>(148 hrs Total) (95% Completed the Fullstack Developer course)</em> </li>
+          <em>(148 hrs Total) (95% Codecademy Fullstack Developer course)</em> </li>
 
         <li> <u>Week 23: Monday, November 8 - Sunday, November 14</u> <br> 
           Final week! This week started with a brief lesson on binary search and search trees. The next lessons were all about interviewing and soft skills, what to expect and how to prepare. 
           The final lesson was more or less a “now do it”. I didn’t feel prepared enough, but I expected I wouldn’t, which is why I have the boot camp coming up in early December. This marks the 
           end of my Fullstack Developer course on Codecademy! I plan on taking the next couple of weeks to slow down and take a break before the boot camp. I plan on doing daily quizzes and the 
           occasional toy problem on leetcode but no more lessons or tutorials. <br> 
-          <em>(154 hrs Total) (100% Completed the Fullstack Developer course)</em> </li>
+          <em>(154 hrs Total) (100% Codecademy Fullstack Developer course)</em> </li>
 
         <li> <u>Week 27: Monday, December 6 - Sunday, December 12</u> <br> 
           I ended up taking the previous 3 weeks off completely, fearing burnout. First week! The first day was mostly set up, the first half of the second day was a bit more of the same. We did 
