--- a/Projects.html
+++ b/Projects.html
@@ -7,6 +7,7 @@
     <title>Colin Hoolwerf</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="blackjackgame.js" defer></script>
   </head>
 
  <!-- Navigation Bar -->
@@ -29,7 +30,6 @@
     <button onclick="hitCard()">Hit</button>
     <button onclick="stayCard()">Stay</button>
     <p id="result-element">Click Start Game to Play!</p>
-    <script src="blackjackgame.js"></script>
   </div>
 
   <div class="Projects">
