added weekly entry

--- a/index.html
+++ b/index.html
@@ -188,16 +188,18 @@
           I ended up taking the previous 3 weeks off completely, fearing burnout. First week! The first day was mostly set up, the first half of the second day was a bit more of the same. We did 
           manage to cover all of the HTML lessons and, I’m guessing, ⅓ of the CSS lessons. The assignment at the end of the week was to create a portfolio page. I created it, but I intend to use 
           this one long-term. <br> 
-          <em>(Fullstack Academy Week 1 of 28)</em> </li>
+          <em>(Fullstack Academy Week 1 of 27)</em> </li>
 
         <li> <u>Week 28: Monday, December 13 - Sunday, December 19</u> <br> 
           This week was about CSS then JS towards the end. We covered responsive design and pseudo-classes. It was a nice refresher, I had already gotten pretty rusty at both! On the final day of 
           the week, we covered the fundamentals of JS. So far, so good! <br> 
-          <em>(Fullstack Academy Week 2 of 28)</em> </li>
+          <em>(Fullstack Academy Week 2 of 27)</em> </li>
 
-        <!-- <li> <u>DATE</u> <br> 
-          ENTRY <br> 
-          <em>PROGRESS</em> </li> -->
+        <li> <u>Week 29: Monday, December 20 - Sunday, December 26</u> <br> 
+          There was only one class this week, on Monday. Class resumes on the 3rd, so I have two weeks “off” but I don’t plan on stopping! My job has given me those same two weeks off! I rewatched 
+          lectures, did and redid the assignments/quizzes, and researched the gaps in my understanding when I found some. I spent most of my time watching all the videos in the CodingTrain p5.js 
+          tutorial playlist. I even got a head start on the next graded project due in the first week of next year! <br> 
+          <em>(Fullstack Academy Week 3 of 27)</em> </li>
 
         <!-- <li> <u>DATE</u> <br> 
           ENTRY <br> 
