--- a/resume.html
+++ b/resume.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<HTML lang="en">
-  <head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Colin Hoolwerf</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -12,16 +12,17 @@
  <!-- Navigation Bar -->
  <nav>
     <a href="index.html" title="Home Page">Home</a>
+    <a href="blog.html" title="Coding Journal">Blog</a>
     <a href="resume.html" title="Resume"><u>Resume</u></a>
-    <a href="Projects.html" title="Projects">Projects</a>
-    <!-- <a href="Interests.html" title="Interests">Interests</a> -->
-    <a href="Contact.html" title="Contacts">Contact</a>
+    <a href="projects.html" title="Projects">Projects</a>
+    <a href="contact.html" title="Contacts">Contact</a>
   </nav>
 
 <!-- Resume Page Body -->
 <body>
-  <div class="AboutSection">
-    <h1><u>About</u></h1>
+    <img id="selfie" src="assets/Selfie.jpg" alt="selfie of Colin Hoolwerf">
+    <div class="AboutSection">
+        <h1><u>About</u></h1>
         <ul>
             <li>I am an aspiring Full-Stack Developer, learning how to code from Fullstack Academy, Codecademy, and YouTube tutorials.</li>
             <li>I am currently a Workplace Coordinator for Autodesk, Inc in Plano, TX. I have a diverse and well rounded employment history with experience in construction (sheet metal), 
@@ -94,14 +95,14 @@
                 </ul>
             </ul>
         </div>
+</body>
 
 <!-- Footer -->
 <footer>
     <a href="mailto:colinhoolwerf@gmail.com" class="fa fa-google" title="Email"></a>
     <a href="https://www.linkedin.com/in/colinhoolwerf/" target="_blank" class="fa fa-linkedin" title="LinkedIn"></a>
     <a href="https://github.com/ColinH58" target="_blank" class="fa fa-github" title="GitHub"></a> 
-    <!-- <a href="https://www.instagram.com/colinh58/" target="_blank" class="fa fa-instagram" title="Instagram"></a> -->
+    <a href="https://www.instagram.com/colinh58/" target="_blank" class="fa fa-instagram" title="Instagram"></a>
     <a href="https://twitter.com/ColinSH58" target="_blank" class="fa fa-twitter" title="Twitter"></a>
   </footer>
-</body>
-</HTML>
+</html>
