--- a/Projects.html
+++ b/Projects.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<HTML lang="en">
-  <head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Colin Hoolwerf</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -13,10 +13,10 @@
  <!-- Navigation Bar -->
  <nav>
   <a href="index.html" title="Home Page">Home</a>
+  <a href="blog.html" title="Coding Journal">Blog</a>
   <a href="resume.html" title="Resume">Resume</a>
-  <a href="Projects.html" title="Projects"><u>Projects</u></a>
-  <!-- <a href="Interests.html" title="Interests">Interests</a> -->
-  <a href="Contact.html" title="Contacts">Contact</a>
+  <a href="projects.html" title="Projects"><u>Projects</u></a>
+  <a href="contact.html" title="Contacts">Contact</a>
 </nav>
 
 <!-- Projects Page Body -->
@@ -81,13 +81,14 @@
     <h1>More Coming Soon!</h1>
   </div>
 
-<!-- Footer -->
-  <footer>
-    <a href="mailto:colinhoolwerf@gmail.com" class="fa fa-google" title="Email"></a>
-    <a href="https://www.linkedin.com/in/colinhoolwerf/" target="_blank" class="fa fa-linkedin" title="LinkedIn"></a>
-    <a href="https://github.com/ColinH58" target="_blank" class="fa fa-github" title="GitHub"></a> 
-    <!-- <a href="https://www.instagram.com/colinh58/" target="_blank" class="fa fa-instagram" title="Instagram"></a> -->
-    <a href="https://twitter.com/ColinSH58" target="_blank" class="fa fa-twitter" title="Twitter"></a>
-  </footer>
 </body>
-</HTML>
+
+<!-- Footer -->
+<footer>
+  <a href="mailto:colinhoolwerf@gmail.com" class="fa fa-google" title="Email"></a>
+  <a href="https://www.linkedin.com/in/colinhoolwerf/" target="_blank" class="fa fa-linkedin" title="LinkedIn"></a>
+  <a href="https://github.com/ColinH58" target="_blank" class="fa fa-github" title="GitHub"></a> 
+  <a href="https://www.instagram.com/colinh58/" target="_blank" class="fa fa-instagram" title="Instagram"></a>
+  <a href="https://twitter.com/ColinSH58" target="_blank" class="fa fa-twitter" title="Twitter"></a>
+</footer>
+</html>
