fixed broken links... I hope

--- a/Projects.html
+++ b/Projects.html
@@ -15,8 +15,8 @@
   <a href="index.html" title="Home Page">Home</a>
   <a href="blog.html" title="Coding Journal">Blog</a>
   <a href="resume.html" title="Resume">Resume</a>
-  <a href="projects.html" title="Projects"><u>Projects</u></a>
-  <a href="contact.html" title="Contacts">Contact</a>
+  <a href="Projects.html" title="Projects"><u>Projects</u></a>
+  <a href="Contact.html" title="Contacts">Contact</a>
 </nav>
 
 <!-- Projects Page Body -->
