--- a/resume.html
+++ b/resume.html
@@ -14,8 +14,8 @@
     <a href="index.html" title="Home Page">Home</a>
     <a href="blog.html" title="Coding Journal">Blog</a>
     <a href="resume.html" title="Resume"><u>Resume</u></a>
-    <a href="projects.html" title="Projects">Projects</a>
-    <a href="contact.html" title="Contacts">Contact</a>
+    <a href="Projects.html" title="Projects">Projects</a>
+    <a href="Contact.html" title="Contacts">Contact</a>
   </nav>
 
 <!-- Resume Page Body -->
