--- a/Contact.html
+++ b/Contact.html
@@ -14,8 +14,8 @@
   <a href="index.html" title="Home Page">Home</a>
   <a href="blog.html" title="Coding Journal">Blog</a>
   <a href="resume.html" title="Resume">Resume</a>
-  <a href="projects.html" title="Projects">Projects</a>
-  <a href="contact.html" title="Contacts"><u>Contact</u></a>
+  <a href="Projects.html" title="Projects">Projects</a>
+  <a href="Contact.html" title="Contacts"><u>Contact</u></a>
 </nav>
 
 <!-- Contact Page Body -->
