--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <div class="Links">
       <a href="blog.html" title="Coding Journal">Blog</a>
       <a href="resume.html" title="Resume">Resume</a>
-      <a href="projects.html" title="Projects">Projects</a>
-      <a href="contact.html" title="Contacts">Contact</a>
+      <a href="Projects.html" title="Projects">Projects</a>
+      <a href="Contact.html" title="Contacts">Contact</a>
       </div>
   </div>
 </body>
