added weekly entry

--- a/blog.html
+++ b/blog.html
@@ -193,9 +193,10 @@
           tutorial playlist. I even got a head start on the next graded project due in the first week of next year! <br> 
           <em>(Fullstack Academy Week 3 of 27)</em> </li>
 
-        <!-- <li> <u>Week 30: Monday, December 27 - Sunday, January 2</u> <br> 
-          ENTRY <br> 
-          <em>(Fullstack Academy Week 4 of 27)</em> </li> -->
+        <li> <u>Week 30: Monday, December 27 - Sunday, January 2</u> <br> 
+          This week I finished the CodingTrain JS tutorials, then watched a couple of other videos from the same teacher. I then researched the Caesar Cipher project that is coming up. Progress was 
+          very slow this week due to a COVID shot and family events. <br> 
+          <em>(Fullstack Academy Week 4 of 27)</em> </li>
 
         <!-- <li> <u>Week 31: Monday, January 3 - Sunday, January 9</u> <br> 
           ENTRY <br> 
