added weekly entry

--- a/blog.html
+++ b/blog.html
@@ -198,9 +198,11 @@
           very slow this week due to a COVID shot and family events. <br> 
           <em>(Fullstack Academy Week 4 of 27)</em> </li>
 
-        <!-- <li> <u>Week 31: Monday, January 3 - Sunday, January 9</u> <br> 
-          ENTRY <br> 
-          <em>(Fullstack Academy Week 5 of 27)</em> </li> -->
+        <li> <u>Week 31: Monday, January 3 - Sunday, January 9</u> <br> 
+          And we’re back! We started the week off with loops then quickly moved on to arrays. I found myself struggling with loops, more than I had when I was working through them in Codecademy. The 
+          project for this week was a Sudoku Validator. If you entered a full sudoku puzzle in the form of an array my program would spit out whether or not the puzzle was completed correctly. I 
+          found it very challenging and very frustrating, but I persevered!  <br> 
+          <em>(Fullstack Academy Week 5 of 27)</em> </li>
 
         <!-- <li> <u>Week 32: Monday, January 10 - Sunday, January 16</u> <br> 
           ENTRY <br> 
