updated weekly entry

--- a/blog.html
+++ b/blog.html
@@ -204,9 +204,10 @@
           of an array my program would spit out whether or not the puzzle was completed correctly. I found it very challenging and very frustrating, but I persevered! <br> 
           <em>(Fullstack Academy Week 5 of 27)</em> </li>
 
-        <!-- <li> <u>Week 32: Monday, January 10 - Sunday, January 16</u> <br> 
-          ENTRY <br> 
-          <em>(Fullstack Academy Week 6 of 27)</em> </li> -->
+        <li> <u>Week 32: Monday, January 10 - Sunday, January 16</u> <br> 
+          This week was all about objects, which I learned I didn’t have as firm a grasp on as I thought. Really just the looping through them part but I feel like I have a good handle on that 
+          now. The project for this week was using a Markov Chain to write a poem. This week ended up being a really fun and challenging week. <br> 
+          <em>(Fullstack Academy Week 6 of 27)</em> </li>
 
         <!-- <li> <u>Week 33: Monday, January 17 - Sunday, January 23</u> <br> 
           ENTRY <br> 
