just a quick test

--- a/blog.html
+++ b/blog.html
@@ -209,9 +209,9 @@
           now. The project for this week was using a Markov Chain to write a poem. This week ended up being a really fun and challenging week. <br> 
           <em>(Fullstack Academy Week 6 of 27)</em> </li>
 
-        <!-- <li> <u>Week 33: Monday, January 17 - Sunday, January 23</u> <br> 
-          ENTRY <br> 
-          <em>(Fullstack Academy Week 7 of 27)</em> </li> -->
+        <li> <u>Week 33: Monday, January 17 - Sunday, January 23</u> <br> 
+          THIS IS A TEST <br> 
+          <em>(Fullstack Academy Week 7 of 27)</em> </li>
 
         <!-- <li> <u>Week 34: Monday, January 24 - Sunday, January 30</u> <br> 
           ENTRY <br> 
