added weekly entry

--- a/blog.html
+++ b/blog.html
@@ -210,7 +210,8 @@
           <em>(Fullstack Academy Week 6 of 27)</em> </li>
 
         <li> <u>Week 33: Monday, January 17 - Sunday, January 23</u> <br> 
-          THIS IS A TEST <br> 
+          We had no class on Monday for MLK day so instead, I used that time to get as ahead as I possibly could. We started the week working with the DOM and event listeners and ended it working 
+          with and in GitHub. The project for the week was a guessing game that I should have showcased in my projects section if you would like to take a look! <br> 
           <em>(Fullstack Academy Week 7 of 27)</em> </li>
 
         <!-- <li> <u>Week 34: Monday, January 24 - Sunday, January 30</u> <br> 
