adjusted guessing game

--- a/Projects.html
+++ b/Projects.html
@@ -36,7 +36,7 @@
   <div class="GuessingGame">
     <div class="heading">
       <h1>Guessing Game!</h1>
-      <h2>Guess any number between 1 and 100!</h2>
+      <h2>Guess a Number 1 - 100</h2>
       <h3 id="results">Take a Guess!</h3>
       <h4 id="minor-hint">Good Luck!</h4>
     </div>
@@ -56,7 +56,6 @@
 <hr>
     <div class="hint">
       <h3 id="major-hint">Need a Hint?</h3>
-      <p>This Will Give You The Answer And Two Wrong Answers</p>
       <button id="hint-btn">Hint!</button>
     </div>
   </div>
