--- a/Projects.html
+++ b/Projects.html
@@ -36,7 +36,7 @@
   <div class="GuessingGame">
     <div class="heading">
       <h1>Guessing Game!</h1>
-      <h2>Guess a Number 1 - 100</h2>
+      <h2>Guess a Number 1 - 100!</h2>
       <h3 id="results">Take a Guess!</h3>
       <h4 id="minor-hint">Good Luck!</h4>
     </div>
