added weekly entry

--- a/blog.html
+++ b/blog.html
@@ -214,9 +214,11 @@
           with and in GitHub. The project for the week was a guessing game that I should have showcased in my projects section if you would like to take a look! <br> 
           <em>(Fullstack Academy Week 7 of 27)</em> </li>
 
-        <!-- <li> <u>Week 34: Monday, January 24 - Sunday, January 30</u> <br> 
-          ENTRY <br> 
-          <em>(Fullstack Academy Week 8 of 27)</em> </li> -->
+        <li> <u>Week 34: Monday, January 24 - Sunday, January 30</u> <br> 
+          Review week! We started working with the DOM and event listeners last week, they decided we need a bit more time with them. This week was light on lectures and mostly just pair 
+          programming labs. In the lab, my partner and I made a webpage where you could add rows of 20 to then click on the cells in the rows to change their colors like really blown up 8-bit 
+          art. The homework for this week is actually due next week, I’ll be making the game snake in the browser! <br> 
+          <em>(Fullstack Academy Week 8 of 27)</em> </li>
 
         <!-- <li> <u>Week 35: Monday, January 31 - Sunday, February 6</u> <br> 
           ENTRY <br> 
