added weekly entry

--- a/blog.html
+++ b/blog.html
@@ -220,9 +220,11 @@
           art. The homework for this week is actually due next week, I’ll be making the game snake in the browser! <br> 
           <em>(Fullstack Academy Week 8 of 27)</em> </li>
 
-        <!-- <li> <u>Week 35: Monday, January 31 - Sunday, February 6</u> <br> 
-          ENTRY <br> 
-          <em>(Fullstack Academy Week 9 of 27)</em> </li> -->
+        <li> <u>Week 35: Monday, January 31 - Sunday, February 6</u> <br> 
+          Review week continued! We spent every lecture night working on our game of choice. We were usually in groups of 4 so that we could ask our fellow classmates for help (as well as the teacher 
+          and TAs via a ticket). This week was easily the most satisfying and validating week of my relatively short coding history. By the end of the week, I had a fully functioning Snake game 
+          with bonus features! Check out my projects page for more! <br> 
+          <em>(Fullstack Academy Week 9 of 27)</em> </li>
 
         <!-- <li> <u>Week 36: Monday, February 7 - Sunday, February 13</u> <br> 
           ENTRY <br> 
